Fix CARGO-912 : The Cargo geronimo2x container does not work with Geronimo 2.1.8 nor 2.2.2 (which supercedes CARGO-911, the same issue with Geronimo 2.1.7 and 2.2.1)